--- a/Code/projects/RadarLead/requirements.txt
+++ b/Code/projects/RadarLead/requirements.txt
@@ -1,7 +1,10 @@
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
+streamlit==1.28.0
+pandas==2.1.3
 requests==2.31.0
 playwright==1.40.0
 python-dotenv==1.0.0
 psycopg2-binary==2.9.9
+sqlalchemy==2.0.23
 
