--- a/Code/projects/RadarLead/requirements.txt
+++ b/Code/projects/RadarLead/requirements.txt
@@ -1,6 +1,8 @@
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 streamlit==1.28.0
+streamlit-folium==0.15.1
+folium==0.15.1
 pandas==2.1.3
 requests==2.31.0
 playwright==1.40.0
